# evaluate_flatbuffers

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  message.fbs
